Add package, gruntfile, CODE_OF_CONDUCT Fix messages and activate tests
=> Requires: I5236b192ffc2a12f71388f7203d4640807eed037
ERM:16962
[3.1.2]

Change-Id: I9013dc3bf253e15f77d68bd3d4f625558da99bb6

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,11 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"Patric Wirth <wirth@hallowelt.com>"
+			"Patric Wirth"
 		]
 	},
 	"bs-exporttables-extension-description": "Ermöglicht den Export von Tabellen zu Excel oder CSV",
-	"prefs-ExportTables": "ExportTables",
 	"bs-exporttables-menu": "Tabelle exportieren",
 	"bs-exporttables-menu-csv": "Kommaseparierte Liste (CSV)",
 	"bs-exporttables-menu-xls": "Microsoft Office Excel 2003 (XLS)",
