Sync I18N from master
Change-Id: I38f6d609361cea9bea4a956dc7994c2aa2e808c9

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,7 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
-			"Patric Wirth <wirth@hallowelt.com>"
+			"	Patric Wirth"
 		]
 	},
 	"bs-exporttables-extension-description": "Ermöglicht den Export von Tabellen zu Excel oder CSV",
