--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,7 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
-			"    Patric Wirth <wirth@hallowelt.com>"
+			"	Patric Wirth"
 		]
 	},
 	"bs-exporttables-ve-exportable-option": "Label for visual editor table option for exportable tables"
