--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,7 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
-			"	Patric Wirth"
+			"Patric Wirth <wirth@hallowelt.com>"
 		]
 	},
 	"bs-exporttables-extension-description": "Ermöglicht den Export von Tabellen zu Excel oder CSV",
