Sync I18N from master
Change-Id: I55e14753be1036cb2191d47e1dc02a01fd23674f

--- a/i18n/da.json
+++ b/i18n/da.json
@@ -4,5 +4,6 @@
 			"Saederup92"
 		]
 	},
-	"bs-exporttables-ve-exportable-option": "Eksporterbar"
+	"bs-exporttables-ve-exportable-option": "Eksporterbar",
+	"bs-exporttables-menu": "Eksporter tabel"
 }
