Sync I18N from master

--- a/i18n/sv.json
+++ b/i18n/sv.json
@@ -1,8 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
+			"Pyscowicz",
 			"Sabelöga"
 		]
 	},
-	"bs-exporttables-ve-exportable-option": "Exporterbar"
+	"bs-exporttables-ve-exportable-option": "Exporterbar",
+	"bs-exporttables-menu": "Exportera tabell"
 }
