Sync I18N from master

--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -1,9 +1,12 @@
 {
 	"@metadata": {
 		"authors": [
-			"Mainframe98"
+			"Mainframe98",
+			"McDutchie"
 		]
 	},
 	"bs-exporttables-menu-csv": "kommagescheiden bestand (CSV)",
-	"bs-exporttables-ve-exportable-option": "Exporteerbaar"
+	"bs-exporttables-ve-exportable-option": "Exporteerbaar",
+	"bs-exporttables-extension-description": "Maakt het mogelijk tabellen naar Excel en CSV te exporteren",
+	"bs-exporttables-menu": "Tabel exporteren"
 }
