Improve export process
- Run multiple smaller API requests to gather data
- Show loading notice to user while its doing it

This is just a slight improvement. It wont fail anymore, but will still take long.

This was done for UserManager table, but some other tables are also included.

[3.2.x]

ERM 25831

Change-Id: I65d9c029d90e0bb0765d15c7580cf851610b343b

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -10,5 +10,7 @@
 	"bs-exporttables-menu-csv": "Label for menu entry that exports a table to csv. Should contain the file extension.\n{{Identical|Comma seperated values (CSV)}}",
 	"bs-exporttables-menu-xls": "{{optional}}\nLabel for menu entry that exports a table to xls. Should contain the file extension.\n{{Identical|Microsoft Office Excel 2003 (XLS)}}",
 	"bs-exporttables-menu-xlsx": "{{optional}}\nLabel for menu entry that exports a table to xlsx. Should contain the file extension.\n{{Identical|Microsoft Office Open XML (XLSX)}}",
-	"bs-exporttables-ve-exportable-option": "Label for visual editor table option for exportable tables"
+	"bs-exporttables-ve-exportable-option": "Label for visual editor table option for exportable tables",
+	"bs-exporttables-loading-text": "Message shown while table is being exported",
+	"bs-exporttables-loading-title": "Title for dialog shown while table is being exported"
 }
