--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,5 +9,7 @@
 	"bs-exporttables-menu-csv": "Comma seperated values (CSV)",
 	"bs-exporttables-menu-xls": "Microsoft Office Excel 2003 (XLS)",
 	"bs-exporttables-menu-xlsx": "Microsoft Office Open XML (XLSX)",
-	"bs-exporttables-ve-exportable-option": "Exportable"
+	"bs-exporttables-ve-exportable-option": "Exportable",
+	"bs-exporttables-loading-text": "Please while while export data is being generated...",
+	"bs-exporttables-loading-title": "Table export"
 }
