Sync I18N from master

--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -7,5 +7,6 @@
 	"bs-exporttables-menu": "테이블 내보내기",
 	"bs-exporttables-menu-csv": "CSV",
 	"bs-exporttables-ve-exportable-option": "내보내기 가능",
-	"bs-exporttables-extension-description": "테이블의 엑셀 및 CSV 내보내기를 허용합니다"
+	"bs-exporttables-extension-description": "테이블의 엑셀 및 CSV 내보내기를 허용합니다",
+	"bs-exporttables-loading-title": "테이블 내보내기"
 }
