--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -1,11 +1,16 @@
 {
 	"@metadata": {
 		"authors": [
+			"DDPAT",
 			"Piramidion"
 		]
 	},
 	"bs-exporttables-extension-description": "Дозволяє експортувати таблиці в Excel та CSV",
 	"bs-exporttables-menu": "Експортувати таблицю",
 	"bs-exporttables-menu-csv": "Значення, через кому (CSV)",
-	"bs-exporttables-ve-exportable-option": "Експортабельна"
+	"bs-exporttables-ve-exportable-option": "Експортабельна",
+	"bs-exporttables-menu-xls": "Microsoft Office Excel 2003 (XLS)",
+	"bs-exporttables-menu-xlsx": "Microsoft Office Open XML (XLSX)",
+	"bs-exporttables-loading-text": "Будь ласка, поки генеруються дані експорту…",
+	"bs-exporttables-loading-title": "Експорт таблиці"
 }
