--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,7 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Mglaser",
-			"Patric Wirth"
+			"Patric Wirth",
+			"Umherirrender"
 		]
 	},
 	"bs-exporttables-extension-description": "Ermöglicht den Export von Tabellen zu Excel oder CSV",
@@ -12,6 +13,6 @@
 	"bs-exporttables-menu-xlsx": "Microsoft Office Open XML (XLSX)",
 	"bs-exporttables-exportable": "Exportierbar",
 	"bs-exporttables-ve-exportable-option": "Exportierbar",
-	"bs-exporttables-loading-text": "Bitte warte, während deine Daten gesammelt werden...",
+	"bs-exporttables-loading-text": "Bitte warte, während deine Daten gesammelt werden …",
 	"bs-exporttables-loading-title": "Tabellenexport"
 }
