--- a/i18n/it.json
+++ b/i18n/it.json
@@ -2,10 +2,13 @@
 	"@metadata": {
 		"authors": [
 			"Beta16",
+			"GpieroMW",
 			"TheRukk"
 		]
 	},
 	"bs-exporttables-menu": "Esporta tabella",
 	"bs-exporttables-ve-exportable-option": "Esportabile",
-	"bs-exporttables-menu-csv": "Valori separati da virgola (CSV)"
+	"bs-exporttables-menu-csv": "Valori separati da virgola (CSV)",
+	"bs-exporttables-extension-description": "Consente di esportare le tabelle in Excel e CSV",
+	"bs-exporttables-loading-text": "Attendere mentre vengono generati i dati per l'esportazione..."
 }
