Sync I18N from master

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,8 +1,8 @@
 {
 	"@metadata": {
 		"authors": [
-			"Fitoschido",
-			"DiegoAmbrocio"
+			"DiegoAmbrocio",
+			"Fitoschido"
 		]
 	},
 	"bs-exporttables-extension-description": "Permite exportar las tablas a Excel y CSV",
