--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,8 +1,8 @@
 {
 	"@metadata": {
 		"authors": [
-			"Mansil alfalb",
-			"Hamilton Abreu"
+			"Hamilton Abreu",
+			"Mansil alfalb"
 		]
 	},
 	"bs-exporttables-extension-description": "Permite a exportação de tabelas para Excel e CSV",
