Sync I18N from master

--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -8,5 +8,7 @@
 	"bs-exporttables-menu-csv": "kommagescheiden bestand (CSV)",
 	"bs-exporttables-ve-exportable-option": "Exporteerbaar",
 	"bs-exporttables-extension-description": "Maakt het mogelijk tabellen naar Excel en CSV te exporteren",
-	"bs-exporttables-menu": "Tabel exporteren"
+	"bs-exporttables-menu": "Tabel exporteren",
+	"bs-exporttables-loading-text": "Even geduld a.u.b. terwijl de exportgegevens worden samengesteld…",
+	"bs-exporttables-loading-title": "Tabellenexport"
 }
