Add export button for aggregated statistics
ERM29537

[4.2.x]

Depends-On: I3590b3f4516e76fe90e009cff796ac9df02c9c17
Change-Id: I5c9ab9e9a64fc83cb751d2cb2b5334a5cb91c9ca

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,5 +11,6 @@
 	"bs-exporttables-menu-xlsx": "Microsoft Office Open XML (XLSX)",
 	"bs-exporttables-ve-exportable-option": "Exportable",
 	"bs-exporttables-loading-text": "Please wait while export data is being generated...",
-	"bs-exporttables-loading-title": "Table export"
+	"bs-exporttables-loading-title": "Table export",
+	"bs-exporttables-statistics-btn-text": "Export"
 }
