--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -13,5 +13,6 @@
 	"bs-exporttables-menu-xlsx": "{{optional}}\nLabel for menu entry that exports a table to xlsx. Should contain the file extension.\n{{Identical|Microsoft Office Open XML (XLSX)}}",
 	"bs-exporttables-ve-exportable-option": "Label for visual editor table option for exportable tables",
 	"bs-exporttables-loading-text": "Message shown while table is being exported",
-	"bs-exporttables-loading-title": "Title for dialog shown while table is being exported"
+	"bs-exporttables-loading-title": "Title for dialog shown while table is being exported",
+	"bs-exporttables-statistics-btn-text": "Label for button to export data"
 }
