--- a/i18n/de.json
+++ b/i18n/de.json
@@ -11,5 +11,6 @@
 	"bs-exporttables-menu-csv": "Kommaseparierte Liste (CSV)",
 	"bs-exporttables-ve-exportable-option": "Exportierbar",
 	"bs-exporttables-loading-text": "Bitte warte, während deine Daten gesammelt werden …",
-	"bs-exporttables-loading-title": "Tabellenexport"
+	"bs-exporttables-loading-title": "Tabellenexport",
+	"bs-exporttables-statistics-btn-text": "Exportieren"
 }
