Fix a spelling erorr in a message
Change-Id: I7b04f6fa0f8dd609c6accba76c5a2a29050c5304
(cherry picked from commit 2d01c7a8ced2a137445617301dd981fe4e13055a)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,7 +6,7 @@
 	},
 	"bs-exporttables-extension-description": "Allows export of tables to Excel and CSV",
 	"bs-exporttables-menu": "Export table",
-	"bs-exporttables-menu-csv": "Comma seperated values (CSV)",
+	"bs-exporttables-menu-csv": "Comma-separated values (CSV)",
 	"bs-exporttables-menu-xls": "Microsoft Office Excel 2003 (XLS)",
 	"bs-exporttables-menu-xlsx": "Microsoft Office Open XML (XLSX)",
 	"bs-exporttables-ve-exportable-option": "Exportable",
