--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -5,9 +5,9 @@
 			"Yurina Tatiana"
 		]
 	},
-	"bs-exporttables-menu": "\u042d\u043a\u0441\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0442\u0430\u0431\u043b\u0438\u0446\u0443",
-	"bs-exporttables-menu-csv": "\u0417\u043d\u0430\u0447\u0435\u043d\u0438\u044f, \u0440\u0430\u0437\u0434\u0435\u043b\u0451\u043d\u043d\u044b\u0435 \u0437\u0430\u043f\u044f\u0442\u044b\u043c\u0438 (CSV)",
-	"bs-exporttables-extension-description": "\u041f\u043e\u0437\u0432\u043e\u043b\u044f\u0435\u0442 \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0442\u0430\u0431\u043b\u0438\u0446\u044b \u0432 Excel \u0438 CSV.",
-	"bs-exporttables-loading-title": "\u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0442\u0430\u0431\u043b\u0438\u0446\u044b",
-	"bs-exporttables-statistics-btn-text": "\u042d\u043a\u0441\u043f\u043e\u0440\u0442"
+	"bs-exporttables-menu": "Экспортировать таблицу",
+	"bs-exporttables-menu-csv": "Значения, разделённые запятыми (CSV)",
+	"bs-exporttables-extension-description": "Позволяет экспортировать таблицы в Excel и CSV.",
+	"bs-exporttables-loading-title": "Экспорт таблицы",
+	"bs-exporttables-statistics-btn-text": "Экспорт"
 }
