--- a/i18n/sl.json
+++ b/i18n/sl.json
@@ -5,10 +5,10 @@
 		]
 	},
 	"bs-exporttables-statistics-btn-text": "Izvozi",
-	"bs-exporttables-extension-description": "Omogo\u010da izvoz tabel v Excel in CSV",
+	"bs-exporttables-extension-description": "Omogoča izvoz tabel v Excel in CSV",
 	"bs-exporttables-menu": "Izvozi tabelo",
-	"bs-exporttables-menu-csv": "Vrednosti, lo\u010dene z vejico (CSV)",
+	"bs-exporttables-menu-csv": "Vrednosti, ločene z vejico (CSV)",
 	"bs-exporttables-ve-exportable-option": "Izvozno",
-	"bs-exporttables-loading-text": "Po\u010dakajte, da se ustvarijo izvozni podatki ...",
+	"bs-exporttables-loading-text": "Počakajte, da se ustvarijo izvozni podatki ...",
 	"bs-exporttables-loading-title": "Izvoz tabele"
 }
