Add invisible label for export button in grid
Related to WCAG.

[4.5.x]

ERM36386

Change-Id: Ia9c10c5a8d9c8f804afd3bca499703209fe24853

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -15,5 +15,6 @@
 	"bs-exporttables-ve-exportable-option": "Label for visual editor table option for exportable tables",
 	"bs-exporttables-loading-text": "Message shown while table is being exported",
 	"bs-exporttables-loading-title": "Title for dialog shown while table is being exported",
-	"bs-exporttables-statistics-btn-text": "Label for button to export data"
+	"bs-exporttables-statistics-btn-text": "Label for button to export data",
+	"bs-exporttables-oojs-btn-aria-label": "Invisible label for export button in grid"
 }
