--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,5 +12,6 @@
 	"bs-exporttables-ve-exportable-option": "Exportable",
 	"bs-exporttables-loading-text": "Please wait while export data is being generated...",
 	"bs-exporttables-loading-title": "Table export",
-	"bs-exporttables-statistics-btn-text": "Export"
+	"bs-exporttables-statistics-btn-text": "Export",
+	"bs-exporttables-oojs-btn-aria-label": "Export"
 }
