Show export notice dialog when exporting
On stores with a lot of data, export may take a very long time. Just putting
the grid in export mode (pending in header) is not enough to make it clear to the user

[4.x]

ERM38313

Change-Id: I3144b94cfebce4d2ee0f638a82085d219abb1631
(cherry picked from commit e9f8981e86c5293d6e33111b97f9e13a1d1bc826)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -13,5 +13,6 @@
 	"bs-exporttables-loading-text": "Please wait while export data is being generated...",
 	"bs-exporttables-loading-title": "Table export",
 	"bs-exporttables-statistics-btn-text": "Export",
-	"bs-exporttables-oojs-btn-aria-label": "Export"
+	"bs-exporttables-oojs-btn-aria-label": "Export",
+	"bs-exporttables-exportprogressdialog-content": "Please wait while the export data is being generated. This may take a while depending on the size of the dataset."
 }
