--- a/i18n/ce.json
+++ b/i18n/ce.json
@@ -5,5 +5,8 @@
 		]
 	},
 	"bs-exporttables-menu": "Экспорйе таблица",
-	"bs-exporttables-statistics-btn-text": "Экспорт"
+	"bs-exporttables-statistics-btn-text": "Экспорт",
+	"bs-exporttables-extension-description": "Таблицаш Excel а, CSV а тӀе экспорт йан аьтто бо.",
+	"bs-exporttables-loading-title": "Таблицин экспорт",
+	"bs-exporttables-oojs-btn-aria-label": "Экспорт"
 }
